implemented server and initial Data display

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "An easy to build  360 degree tour cms ",
   "main": "index.js",
   "scripts": {
-    "test": "Jest"
+    "test": "Jest",
+    "start": "nodemon --exec babel-node server.js --ignore public/",
+    "dev": "webpack -wd"
   },
   "repository": {
     "type": "git",
